added my next small code

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div>
-            <button class="btn text-gray-500"><i class="fa-solid fa-arrow-right-from-bracket rotate-180 text-gray-900"></i> Log Out</button>
+            <button id="logout-btn" class="btn text-gray-500"><i class="fa-solid fa-arrow-right-from-bracket rotate-180 text-gray-900"></i> Log Out</button>
         </div>
     </div>
     <div class=" mt-5 ">
