added my registration section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 <!-- type="button" use na korle reaload korar por seta show korbe na console e and normal button hisebe use hobe -->
         <button  class="btn bg-[#0874F2] text-white mt-5
         w-full rounded-3xl" id="Login-Button">Login</button>
+
+        <div class="mt-4 text-center">
+            <p class="text-gray-600">Don't have an account? 
+            <a href="registration.html" class="text-[#0874F2] font-semibold hover:underline">Register</a>
+            </p>
+        </div>
+
        </form>
 
 
